# KasiPass

./: .dockerignore  .env.example  .gitignore  BUILD.md  README.md  demo.html  docker-compose.yml  index.html  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-node.yml  ci.yml  node.js.yml
backend/: .dockerignore  .pyre_configuration  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt  seed.py  test_api.py  test_api2.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: bookings.py  chat.py  listings.py  security.py  taxi.py  users.py
backend/app/utils/: qr.py
frontend/: .dockerignore  .easignore  .gitignore  App.js  Dockerfile  app.json  eas.json  package-lock.json  package.json  tailwind.config.js
frontend/context/: AuthContext.js
frontend/screens/: ChatScreen.js  CheckoutScreen.js  ConversationScreen.js  CreateListingScreen.js  ExploreScreen.js  GetStartedScreen.js  HomeScreen.js  ListingDetailScreen.js  LoginScreen.js  OrderScreen.js  ProfileScreen.js  RestaurantScreen.js  ScannerScreen.js  SecurityScreen.js  TaxiTrackingScreen.js  VendorDashboard.js  WalletScreen.js
frontend/services/: api.js
