[project]
name = "kasipass-backend"
version = "0.1.0"
description = "KasiPass Community OS Backend"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "qrcode",
    "pillow",
    "python-multipart",
    "requests",
    "email-validator",
]

[tool.pyright]
include = ["app", "seed.py"]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.14"
typeCheckingMode = "basic"
extraPaths = ["."]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]
